--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.4",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "exif-js": "^2.3.0",
+    "exifreader": "^4.5.0",
     "firebase": "^9.8.1",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
@@ -45,5 +48,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24"
-  }
+  },
+  "proxy": "https://firebasestorage.googleapis.com"
 }
